<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.z_waligorski.przyrodnik.AddObservationActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="8dp">

            <TextView
                android:id="@+id/coordinates"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/wait_for_location_turn_on_GPS"
                android:gravity="center" />

            <EditText
                android:id="@+id/note_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/title_hint" />

            <EditText
                android:id="@+id/note"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="37dp"
                android:hint="@string/note_hint"
                android:minLines="3"
                android:gravity="start" />

            <ImageView
                android:id="@+id/photo_image_view"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center" >

        <Button
            android:id="@+id/capture_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_photo_button"
            android:onClick="launchCamera"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp" />

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/save_button"
            android:onClick="saveClicked"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:layout_marginLeft="2dp"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="4dp" />

    </LinearLayout>

</LinearLayout>
